--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-dom": "^17.0.2",
         "react-material-ui-form-validator": "^3.0.0",
         "react-perfect-scrollbar": "^1.5.8",
+        "react-qr-barcode-scanner": "^1.0.6",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.0.2",
         "react-scripts": "^4.0.3",
