--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "echarts": "^5.2.2",
         "echarts-for-react": "^3.0.2",
         "formik": "^2.2.9",
+        "formik-material-ui": "^4.0.0-alpha.2",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.19",
@@ -33,6 +34,7 @@
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.0.2",
         "react-scripts": "^4.0.3",
+        "react-swipeable-views": "^0.14.0",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.0",
         "shortid": "^2.2.16",
