--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
         "@mui/icons-material": "^5.1.1",
         "@mui/lab": "^5.0.0-alpha.55",
         "@mui/material": "^5.0.6",
+        "@mui/styles": "^5.8.4",
         "autosuggest-highlight": "^3.2.0",
         "axios": "^0.24.0",
         "babel-polyfill": "^6.26.0",
         "clsx": "^1.1.1",
         "cross-fetch": "^3.1.4",
+        "d3-ease": "^3.0.1",
+        "d3-interpolate": "^3.0.1",
         "date-fns": "^2.26.0",
         "echarts": "^5.2.2",
         "echarts-for-react": "^3.0.2",
