--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.19.2",
+        "@createnextapp/react-barcode": "^1.1.1",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
         "@mui/icons-material": "^5.1.1",
